<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coneisc</string>
    <string name="sample_content">Sample of dragging the content.\nThe menu consists of a ListView, for which the
        active position is saved through configuration changes.\nAdditionally, if the menu is open, a back press will
        close it.</string>
    <string name="sample_window">Sample of dragging the entire window.\nThe menu is a simple ScrollView, with a click
        listener set on each item.\nThe drawer will animate slightly open, to make it more discoverable.\nAdditionally,
        if the menu is open, a back press will close it.</string>
    <string name="sample_listactivity">Sample of how to use the drawer with ListActivity.\nWhen running on ICS or
        greater, the ActionBar up button will blink until clicked by the user. This is done to make the menu more
        discoverable.\nAdditionally, if the menu is open, a back press will close it.</string>
    <string name="sample_rightmenu">This sample shows how to position the menu to the right of the content.\nRun on
        an API14+ device to see how it interacts with the overflow button.</string>
    <string name="sample_topmenu">This sample shows how to position the menu above the content.</string>
    <string name="sample_bottommenu">This sample shows how to position the menu below the content.</string>
    <string name="sample_layout">This sample shows how to use the drawer in a layout file.
        \nThe top drawer is used in this sample.</string>
    <string name="sample_static">This sample shows how to attach a drawer that is always visible.</string>
    <string name="favoritos">Favoritos</string>
    <string name="title_activity_xxiconeisc">Xxiconeisc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hola world</string>
    <string name="portada">Portada del XXICONEISC</string>
    <string name="contenido_coneisc">El Vigésimo Primer Congreso Nacional de Estudiantes de Ingeniería de Sistemas y Computación, XXI CONEISC, es el evento de índole nacional que reúne a los estudiantes de las carreras de Ingeniería de Sistemas, Informática, Computación y afines, promovido por la Asociación Peruana de Estudiantes de ingeniería de Sistemas y Computación (APEISC); este año 2013 la organización está a cargo de la Facultad de ingeniería de Sistemas e Informática de la Universidad Nacional de San Martin de Tarapoto, a partir del día 12 al 17 de Agosto.</string>
    <string name="conferencias">Calendario de Conferencias</string>
    <string name="visualizar">Click para visualizar Cronograma</string>
    <string name="talleres">Calendario de Talleres</string>
    <string name="day_name_format">EEE</string>

<string name="data">
  El Vigésimo Primer Congreso Nacional de Estudiantes de Ingeniería de Sistemas y Computación, XXI CONEISC, es el evento de índole nacional que reúne a los estudiantes de las carreras de Ingeniería de Sistemas, Informática, Computación y afines, promovido por la Asociación Peruana de Estudiantes de ingeniería de Sistemas y Computación (APEISC); este año 2013 la organización está a cargo de la Facultad de ingeniería de Sistemas e Informática de la Universidad Nacional de San Martin de Tarapoto, a partir del día 12 al 17 de Agosto.
</string>
    
  <string name="logounsm">logo de la unsm</string>
  <string name="logofisi">logo de la fisi</string>
  <string name="logoapeisc">logo del apeisc</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="xxiconeisc">XXICONEISC</string>
    <string name="conocenos">Conocenos</string>
    <string name="ponentes">Ponentes</string>
    <string name="conferencias">Conferencias</string>
    <string name="talleres">Talleres</string>
    <string name="concursos">Concursos</string>
    <string name="conf">Calendario de Conferencias</string>
    <string name="actividades">Actividades</string>
    <string name="inversion">Inversión</string>
    <string name="taller">Calendario de Talleres</string>
    <string name="textoconeisc">El Vigésimo Primer Congreso Nacional de Estudiantes de Ingeniería de Sistemas y Computación, XXI CONEISC, es el evento de índole nacional que reúne a los estudiantes de las carreras de Ingeniería de Sistemas, Informática, Computación y afines, promovido por la Asociación Peruana de Estudiantes de ingeniería de Sistemas y Computación (APEISC); este año 2013 la organización está a cargo de la Facultad de ingeniería de Sistemas e Informática de la Universidad Nacional de San Martin de Tarapoto, a partir del día 12 al 17 de Agosto.</string>
	<string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.</string>
    <string name="play">Visualizar</string>
    <string name="add_to_playlist">Descargar</string>
    <string name="search">Search</string>
    <string name="titulo_deportivo">Campeonato Deportivo</string>
    <string name="hospedajes">Hospedajes</string>
    <string name="hostales">Hostales</string>
    <string name="alojamientos">Alojamientos</string>
    <string name="hoteles">Hoteles</string>
    <string name="hosterias">Hosterias</string>
    <string name="lista_ponentes">LISTA DE PONENTES</string>
</resources>