<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/MenuDrawer.Widget.Category"
            android:id="@+id/favoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favoritos" />

        <TextView
            android:id="@+id/xxiconeisc"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/coneisc"
            android:text="@string/xxiconeisc" />

        <TextView
            android:id="@+id/conocenos"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/conocenos"
            android:text="@string/conocenos" />

        <TextView
            style="@style/MenuDrawer.Widget.Category"
            android:id="@+id/xxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xxiconeisc" />

        <TextView
            android:id="@+id/ponentes"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ponentes"
            android:text="@string/ponentes" />

        <TextView
            android:id="@+id/conferencias"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/conferencias"
            android:text="@string/conferencias" />

        <TextView
            android:id="@+id/talleres"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/talleres"
            android:text="@string/talleres" />
        
        <TextView
            android:id="@+id/inversion"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/inversion"
            android:text="@string/inversion" />

        <TextView
            android:id="@+id/concursos"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/concursos"
            android:text="@string/concursos" />

        <TextView
            android:id="@+id/actividades"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actividades"
            android:text="@string/actividades" />
        
        <TextView
            android:id="@+id/edecanes"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/facebook"
            android:text="Edecanes" />
        
<!-- 
        <TextView
            style="@style/MenuDrawer.Widget.Category"
            android:id="@+id/comollegar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Como Llegar" />

        <TextView
            android:id="@+id/terrestre"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/terrestre"
            android:text="Via Terrestre" />

        <TextView
            android:id="@+id/aerea"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/aerea"
            android:text="Via Aerea" />

        <TextView
            android:id="@+id/fluvial"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/fluvial"
            android:text="Via Fluvial" />
 -->
        <TextView
            style="@style/MenuDrawer.Widget.Category"
            android:id="@+id/tarapoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tarapoto" />

        <TextView
            android:id="@+id/hoteles"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/hoteles"
            android:text="Hoteles" />
<!-- 
        <TextView
            android:id="@+id/restaurante"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/restaurante"
            android:text="Restaurantes" />
 -->
        <TextView
            android:id="@+id/turismo"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/turismo"
            android:text="Turismo" />
    </LinearLayout>

</ScrollView>